# confidential-computing-cvm-guest-attestation

cvm-securekey-release-app/: AttestationUtil.cpp  AttestationUtil.h  CMakeLists.txt  Main.cpp
